tests/regression/errors/basic/syntax_error_3.csd
// Syntax error test 3 - missing semicolon
sus x drip = 3
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
